--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,10 @@
           <!-- content -->
           <div class='mdl-grid mdl-grid--no-spacing b-content'>
 
-            <div class="mdl-cell mdl-cell--4-col __info mdl-color--brown-50 mdl-color-text--grey-800">
-              Left block
+            <div class="mdl-cell mdl-cell--4-col __info">
+              <div class='left-side mdl-color--brown-50 mdl-color-text--grey-800'>
+                Left block
+              </div>
             </div>
 
             <div class="mdl-cell mdl-cell--8-col __content mdl-grid">
