--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <div class="app-content">
 
           <!-- header -->
-          <div class='mdl-grid mdl-grid--no-spacing b-header'>
+          <div class='mdl-grid mdl-grid--no-spacing mdl-shadow--3dp b-header'>
             <div class="mdl-cell mdl-cell--4-col __logo mdl-color--brown-50 mdl-color-text--grey-800">
               Main Logo
             </div>
@@ -36,13 +36,13 @@
           <div class='mdl-grid mdl-grid--no-spacing b-content'>
 
             <div class="mdl-cell mdl-cell--4-col __info">
-              <div class='left-side mdl-color--brown-50 mdl-color-text--grey-800'>
+              <div class='left-side mdl-shadow--3dp mdl-color--brown-50 mdl-color-text--grey-800'>
                 Left block
               </div>
             </div>
 
             <div class="mdl-cell mdl-cell--8-col __content mdl-grid">
-              <div class="mdl-cell mdl-cell--12-col mdl-color--brown-50 mdl-color-text--grey-800 main-content-cell">
+              <div class="mdl-cell mdl-cell--12-col mdl-shadow--3dp mdl-color--brown-50 mdl-color-text--grey-800 main-content-cell">
                 Main content
 
                 <!-- table exapmple -->
